 ^ [#28609] Update joomlaupdate @SInCE tags missed in 61f5ee8. Thanks Rouven
 # [#28285] E_NOTICE about array to string conversion in debug.php with PHP 5.4. Thanks Rouven
 # [#28560] Backport some files completely from the current platform. Thanks Rouven
 # [#28599] Backport the new JLoader from the platform 12.1. Thanks Rouven
 ^ [#28600] Add a code style checker. Thanks Rouven

02-Jun-2012 Jean-Marie Simonet
 # [#28375] Remove blacklist code from FinderIndexerHelper. Thanks Michael
 # [#28605] ACL regression in com_finder. Thanks Sander
 # [#27819] The articles model displays articles for which there is no category access. Thanks Carsten and Nick
 #  [#28608] Remove unused file in com_users. Thanks Rouven

01-Jun-2012 Jean-Marie Simonet
 # [#28589] *ACL regression in com_search
 # [#28588] *ACL regression in com_messages
 # [#28587] *ACL regression in com_redirect
 # [#28579] Fix xreference regression from 1.7 to 2.5. Thanks Andrea.
 # [#28561] Move some JFormFields from the platform to the CMS. Thanks Rouven.
 # [#28335] Simplify schema path in installation, add support for other databases. Thanks Michael.
 # [#28598] *Article Category list displays hits in author column if no article author or createdbyalias.
 
30-May-2012 Jean-Marie Simonet
 $ Missing language string
 $ Updating installation ini files: et-EE, mn-MN

29-May-2012 Jean-Marie Simonet
 # [#28566] Update TinyMCE 3.5.1.1. Thanks Rouven

28-May-2012 Jean-Marie Simonet
 # [#28572] *Administration user notes checked on notes page gives warning arugment missing
 ^ [#28370] Get rid of assign() uses in view: admin + site.Thanks Ofer and Rouven
 ^ [#28442] Update Library Manifests. Thanks Michael.

27-May-2012 Jean-Marie Simonet
 # [#28022] Smart search and unpublished Content Maps fails after edit of an article.Thanks Michael.
 $ [#28571] Typo in en-GB.com_templates.ini. Thanks Stella.
 ^ [#28569] Correct docblocs in com_joomlaupdate. Thanks Rouven.

25-May-2012 Jean-Marie Simonet